[package]
name = "timetable-uma"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
eyre = "0.6.12"
ical = { version = "0.11.0", features = ["generator"] }
reqwest = "0.12.23"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
